##############################################################################
# Copyright (c) 2016-19, Lawrence Livermore National Security, LLC and Umpire
# project contributors. See the COPYRIGHT file for details.
#
# SPDX-License-Identifier: (MIT)
##############################################################################

install(FILES plot_allocations DESTINATION ${UMPIRE_TOOLS_OUTPUT_DIR})
install(FILES plot_allocator_traces DESTINATION ${UMPIRE_TOOLS_OUTPUT_DIR})
